--- a/css/main/main.less
+++ b/css/main/main.less
@@ -44,7 +44,7 @@ u {
   vertical-align: top;
   min-height: 500px;
   width: 840px;
-  color: #222222;
+  color: #222
 }
 .maincontent #columns .main-column-right .usercontent {
   text-align: justify;
@@ -63,13 +63,13 @@ u {
   min-height: 255px;
   margin-right: 10px !important;
   float: left;
-  border: 1px dashed #e1e1e1;
+	border: 1px dashed #e1e1e1;
   text-align: center;
   box-shadow: none;
   border-radius: 0;
 }
 .maincontent #columns .main-column-right .container .product:hover {
-  border: 1px solid #e1e1e1;
+	border: 1px solid #e1e1e1;
 }
 .maincontent #columns .main-column-right .container .product .number {
   font-weight: 100 !important;
@@ -77,14 +77,14 @@ u {
   white-space: normal !important;
 }
 .maincontent #columns .main-column-right .container .product .price {
-  font-size: 18px;
-  font-weight: normal;
-  color: #444;
+	font-size: 18px;
+	font-weight: normal;
+	color: #444;
 }
 .maincontent #columns .main-column-right .container .product .imageFrame {
-  position: relative;
-  height: 200px;
-  width: 175px;
+	position: relative;
+	height: 200px;
+	width: 175px;
 }
 .maincontent #columns .main-column-right .container .product .imageFrame img {
   position: absolute;
@@ -98,6 +98,7 @@ u {
   right: 0;
   margin: auto;
 }
+
 .maincontent #columns .main-column-right .container .product a {
   font-weight: bold;
   font-size: 10px;
@@ -150,7 +151,8 @@ u {
 .maincontent .topmenu {
   margin: 5px -9999rem 10px;
   padding: 0.25rem 9999rem;
-  background-color: rgba(248, 247, 247, 0.95);
+
+  background-color: rgba(248, 247, 247, .95);
 }
 .maincontent .topmenu nav {
   padding-top: 8px;
@@ -168,19 +170,18 @@ u {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.maincontent .topmenu nav li a,
-.maincontent .topmenu nav li a:visited,
-.maincontent .topmenu nav li a:hover,
-.maincontent .menucontent nav a,
-.maincontent .menucontent nav a:visited {
-  color: #222;
-  text-decoration: none;
+
+.maincontent .topmenu nav li a, .maincontent .topmenu nav li a:visited, .maincontent .topmenu nav li a:hover, .maincontent .menucontent nav a, .maincontent .menucontent nav a:visited {
+	color: #222;
+	text-decoration: none;
 }
+
 .maincontent .menucontent nav a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
+
 .maincontent .menucontent {
-  margin-top: 25px;
+	margin-top: 25px;
   margin-left: 10px;
   font-size: 14px;
 }
@@ -191,7 +192,7 @@ u {
   margin-right: 10px;
 }
 .maincontent .menucontent nav li {
-  padding: 5px 0;
+	padding: 5px 0;
 }
 #footer {
   width: 1060px;
@@ -202,11 +203,11 @@ u {
   padding: 5px 0 0 0;
 }
 #header {
-  width: auto;
+	width: auto;
   height: 50px;
   margin: auto;
   padding: 5px 0 0 0;
-  background-color: #465363;
+	background-color: #465363;
 }
 #bottommenu {
   width: 1060px;
