--- a/css/main/main.css
+++ b/css/main/main.css
@@ -341,29 +341,28 @@ u {
   color: #222;
 }
 .maincontent .main-column-right .product .product-right {
-  margin-left: 26px;
   float: left;
   clear: right;
+  margin-top: 50px;
 }
 .maincontent .main-column-right .product .product-right .product-options {
   width: 399px;
   display: inline-block;
 }
 .maincontent .main-column-right .product .product-right .product-options .header {
-  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer.png');
-  width: 399px;
-  height: 51px;
+  display: none;
 }
 .maincontent .main-column-right .product .product-right .product-options .body {
   width: 363px;
-  border: solid 1px #D2CFCD;
+  border: none;
   border-top: none;
   margin-left: 7px;
-  background-color: #EFEBE8;
-  box-shadow: 0 2px 4px rgba(92, 92, 92, 0.25);
   padding: 10px;
   padding-bottom: 20px;
   color: #565656;
+}
+.maincontent .main-column-right .product .product-right .product-options .body .intro.item {
+  display: none;
 }
 .maincontent .main-column-right .product .product-right .product-options .body .intro.item .description {
   font-weight: bold;
@@ -396,10 +395,14 @@ u {
   font-size: 20px;
   padding-top: 1px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  display: none;
 }
 .maincontent .main-column-right .product .product-right .product-options .body .input-item {
   margin-top: 15px;
   padding-left: 50px;
+}
+.maincontent .main-column-right .product .product-right .product-options .body .input-item b {
+  display: none;
 }
 .maincontent .main-column-right .product .product-right .product-options .body .number-item {
   vertical-align: top;
@@ -424,7 +427,6 @@ u {
   width: 300px;
   height: 80px;
   border: solid 1px #7D7D7F;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
 }
 .maincontent .main-column-right .product .product-right .product-options .body .number-item select {
   width: 300px;
@@ -438,23 +440,15 @@ u {
   box-sizing: border-box;
 }
 .maincontent .main-column-right .product .product-right .product-options .body .number-item .cart-button {
-  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/images/cart/cart-white.svg');
-  background-size: 34px 28px;
-  background-repeat: no-repeat;
-  background-position: 230px;
-  width: 300px;
+  width: 307px;
   border: outset 1px #7D7D7F;
-  border-radius: 10px;
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
   padding: 10px;
   padding-top: 12px;
-  padding-right: 40px;
   color: white;
-  background-color: #008200;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #465363;
   outline: none;
 }
 .maincontent .main-column-right .product .product-right .product-options .body .number-item .cart-button:hover {
@@ -471,9 +465,9 @@ u {
 .maincontent .main-column-right .product .product-right .product-options .footer {
   height: 42px;
   width: 386px;
-  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer-onder.png');
   margin-left: 7px;
   margin-bottom: 20px;
+  display: none;
 }
 .maincontent.hasmenu .content {
   width: 858px;
@@ -652,7 +646,7 @@ u {
 }
 #bottommenu2 nav {
   font-size: 15px;
-  margin: 0 -9999rem 10px;
+  margin: 0 -9999rem 0;
   padding: 0.50rem 9999rem;
   background-color: #465363;
 }
