--- a/css/main/main.less
+++ b/css/main/main.less
@@ -348,28 +348,25 @@ u {
 				}
 			}
 			.product-right {
-				margin-left: 26px;
 				float: left;
 				clear: right;
+				margin-top: 50px;
 				.product-options {
 					width: 399px;
 					display: inline-block;
 					.header {
-						background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer.png');
-						width: 399px;
-						height: 51px;
+						display: none;
 					}
 					.body {
 						width: 363px;
-						border: solid 1px #D2CFCD;
+						border: none;
 						border-top: none;
 						margin-left: 7px;
-						background-color: #EFEBE8;
-						box-shadow: 0 2px 4px rgba(92, 92, 92, 0.25);
 						padding: 10px;
 						padding-bottom: 20px;
 						color: #565656;
 						.intro.item {
+							display: none;
 							.description {
 								font-weight: bold;
 							}
@@ -402,10 +399,14 @@ u {
 							font-size: 20px;
 							padding-top: 1px;
 							text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+							display: none;
 						}
 						.input-item {
 							margin-top: 15px;
 							padding-left: 50px;
+							b {
+								display: none;
+							}
 						}
 						.number-item {
 							vertical-align: top;
@@ -429,7 +430,6 @@ u {
 								width: 300px;
 								height: 80px;
 								border: solid 1px #7D7D7F;
-								box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
 							}
 							select {
 								width: 300px;
@@ -443,23 +443,15 @@ u {
 								box-sizing: border-box;
 							}
 							.cart-button {
-								background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/images/cart/cart-white.svg');
-								background-size: 34px 28px;
-								background-repeat: no-repeat;
-								background-position: 230px;
-								width: 300px;
+								width: 307px;
 								border: outset 1px #7D7D7F;
-								border-radius: 10px;
 								font-size: 16px;
 								font-weight: bold;
 								text-transform: uppercase;
 								padding: 10px;
 								padding-top: 12px;
-								padding-right: 40px;
 								color: white;
-								background-color: #008200;
-								text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
-								box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+								background-color: #465363;
 								outline: none;
 								&:hover {
 									box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
@@ -478,9 +470,9 @@ u {
 					.footer {
 						height: 42px;
 						width: 386px;
-						background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer-onder.png');
 						margin-left: 7px;
 						margin-bottom: 20px;
+						display: none;
 					}
 				}
 			}
@@ -665,7 +657,7 @@ u {
 	margin: auto;
 	nav {
 		font-size: 15px;
-		margin: 0 -9999rem 10px;
+		margin: 0 -9999rem 0;
 		padding: 0.50rem 9999rem;
 		background-color: #465363;
 		li {
